-BugFix: Navbar not changing after login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <div class="wrapper">
 
       <div ng-include="'generic/_left_aside.html'"></div>
-      <div ng-include="'top_nav/_top_nav.html'"></div>
+      <div ng-include="'nav/_nav.html'"></div>
 
       <div class="content-wrapper">
         <section class="content">
